new version of remote (w/ buttons and standard screen), base version of switch

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,7 +22,39 @@ lib_deps =
     madhephaestus/ESP32Encoder
     adafruit/Adafruit BusIO
 
+[env:remote2]
+src_filter = +<remote2.cpp>
+; build_unflags = -Werror=reorder
+lib_deps =
+    Button2
+    adafruit/Adafruit BusIO
+    adafruit/Adafruit ST7735 and ST7789 Library
+    adafruit/Adafruit SSD1306 @ ^2.4.1
+
 [env:motor]
 src_filter = +<motor.cpp>
 lib_deps =
     erropix/ESP32 AnalogWrite@^0.2
+
+[env:motor-esp8266]
+platform = espressif8266
+board = esp_wroom_02
+src_filter = +<motor.cpp>
+
+[env:switch-esp8266]
+platform = espressif8266
+board = esp_wroom_02
+src_filter = +<switch.cpp>
+
+[env:switch-esp32]
+src_filter = +<switch.cpp>
+lib_deps =
+    roboticsbrno/ServoESP32 @ ^1.0.3
+
+
+[env:test]
+src_filter = +<test.cpp>
+; lib_deps =
+;     adafruit/Adafruit BusIO
+;     adafruit/Adafruit ST7735 and ST7789 Library
+;     geeksville/esp32-micro-sdcard
