adapter motor for esp8266

--- a/platformio.ini
+++ b/platformio.ini
@@ -39,7 +39,7 @@ lib_deps =
 [env:motor-esp8266]
 platform = espressif8266
 board = esp_wroom_02
-src_filter = +<motor.cpp>
+src_filter = +<motor_esp8266.cpp>
 
 [env:switch-esp8266]
 platform = espressif8266
